@@ -49,6 +49,7 @@
 CC = ../../bin/sdcc
 LINKER = gplink
 TARGETPIC = 16f873
+TARGETPIC2 = 16f877
 CFLAGS = -mpic14 -c -pp$(TARGETPIC)
 
 .SUFFIXES: .asm .c .cod .stc
@@ -87,7 +88,6 @@ SRC = b.c \
 	rotate3.c \
 	rotate4.c \
 	rotate5.c \
-	struct1.c \
 	sub.c \
 	sub2.c \
 	switch1.c \
@@ -95,6 +95,7 @@ SRC = b.c \
 	xor.c \
 	ptrfunc.c
 
+#	struct1.c \
 #	mul1.c \
 
 COD := $(patsubst %.c, %.cod, $(SRC))
@@ -115,7 +116,7 @@ all:	test
 # The .cod files are generated by gpasm
 # these get loaded by gpsim.
 .o.cod:
-	$(LINKER) --map -c -s $(TARGETPIC).lkr -o $*.o $*.o
+	$(LINKER) --map -c -s $(TARGETPIC2).lkr -o $*.o $*.o
 
 #	gpasm $*.asm
 
@@ -140,6 +141,7 @@ o : $(O)
 asm : $(ASM)
 
 stc : $(STC)
+	echo $(STC)
 
 test:	$(STC)
 	echo "Done - Results are in $(LOGFILE)"
